# bloomvalley

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  cron_scheduler.py  import_aot_history.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_import_tables.py  003_add_cash_balance.py  004_add_dividend_events.py  005_add_news_tables.py  006_add_google_news_source_enum.py  007_add_insider_tables.py  008_drop_esg_scores.py  009_add_recommendations.py  010_extend_alerts_add_history.py  011_add_bonds_table.py  012_add_fundamentals_and_earnings.py  013_add_pipeline_source_enums.py  014_add_global_events_tables.py  015_add_fund_asset_class_enum.py  016_add_fundamental_metrics.py  017_add_regional_rss_source_enum.py  018_add_earnings_estimate_columns.py  019_add_recommendation_checkpoints.py  020_add_deployment_plans.py  021_add_dividend_reconciliation_constraints.py  022_add_morningstar_id.py  023_add_company_group.py
backend/app/: config.py  main.py
backend/app/db/: base.py  engine.py
backend/app/pipelines/: __init__.py  alpha_vantage.py  base.py  coingecko.py  dividend_reconciliation.py  ecb.py  ecb_macro.py  fi_se_insider.py  finnhub_earnings.py  fred.py  french_factors.py  gdelt.py  google_news.py  justetf.py  morningstar.py  morningstar_fundamentals.py  nasdaq_nordic_insider.py  openinsider.py  quiver_congress.py  regional_news.py  runner.py  sec_edgar.py  (+3 more)
backend/scripts/: run_agents.py  seed-securities.py
backend/tests/: conftest.py
(+221 files in other folders)
